# scoreflow

./: .gitignore  CLAUDE.md
.github/workflows/: deploy-hf.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_test_audio.py  pyproject.toml  render_scores.py  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/pipeline/: omr_validator.py  pipeline.py  quantizer.py  refiner.py  score_generator.py  separator.py  transcriber.py
backend/tests/: test_pipeline.py  test_quantizer.py  test_score_generator.py  test_separator.py  test_transcriber.py
backend/tests/benchmark/: create_sample_dirs.py  run_benchmark.py
backend/training/: __init__.py  calibrate.py  datasets.py
docs/: accuracy-benchmark.md  ai-pipeline-architecture.md  backend-guide.md  deployment-guide.md  frontend-guide.md  technical-report.md
docs/superpowers/plans/: 2026-05-07-notara-proper-launch.md
docs/superpowers/specs/: 2026-05-07-notara-rebrand-redesign-seo-design.md
frontend/: .env.local.example  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: AbcViewer.tsx  DashboardList.tsx  Header.tsx  MusicXmlViewer.tsx  PricingCards.tsx  PrintableScore.tsx  ProgressCard.tsx  ResultsPanel.tsx  ShareModal.tsx  SharedScoreList.tsx  UpgradePrompt.tsx  UploadZone.tsx  UsageBanner.tsx
frontend/lib/: admin.ts  api.ts  apiAuth.ts  auth.ts  comp.ts  db.ts  demoSongs.ts  stripe.ts  usage.test.ts  usage.ts
supabase/migrations/: 001_initial_schema.sql
(+30 files in other folders)
