[project]
name = "scoreflow-backend"
version = "0.1.0"
description = "ScoreFlow AI — Audio to sheet music conversion pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
